--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Library to create and run migration scripts for Mongo DBs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "MONGODB_URI=mongodb://localhost:27017/test jest --config=jest.json",
+    "pretest": "docker run --rm -p 27017:27017 --name migrate_test -d mongo:3.4.10 --smallfiles && sleep 5s",
+    "posttest": "docker stop migrate_test"
+  },
+  "bin": {
+    "bin": "./bin/migrate"
   },
   "repository": {
     "type": "git",
@@ -20,5 +25,15 @@
   "bugs": {
     "url": "https://github.com/Keystone-Strategy/migrate/issues"
   },
-  "homepage": "https://github.com/Keystone-Strategy/migrate#readme"
+  "homepage": "https://github.com/Keystone-Strategy/migrate#readme",
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "commander": "^2.18.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
+  }
 }
