--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "migrate",
+  "name": "mongodb-migration",
   "version": "1.0.0",
   "description": "Library to create and run migration scripts for Mongo DBs",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "release": "np"
   },
   "bin": {
     "migrate": "./bin/migrate"
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
-    "mongodb-memory-server": "^2.4.2"
+    "mongodb-memory-server": "^2.4.2",
+    "np": "^3.0.4"
   }
 }
