--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "jest": "^23.6.0",
     "mongodb-memory-server": "^2.4.2",
     "np": "^3.0.4"
+  },
+  "db": {
+    "seedPath": "__tests__/support/seed"
   }
 }
