--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
     "dotenv": "^6.0.0",
+    "jsonfile": "^5.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^5.3.0"
