--- a/package.json
+++ b/package.json
@@ -32,14 +32,28 @@
     "jsonfile": "^5.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.0"
+    "mongoose": "^5.3.0",
+    "prettier": "^1.14.3"
   },
   "devDependencies": {
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
+    "lint-staged": "^8.0.4",
     "mongodb-memory-server": "^2.4.2",
     "np": "^3.0.4"
   },
   "db": {
     "seedPath": "__tests__/support/seed"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
