--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "commander": "^2.18.0",
     "jsonfile": "^5.0.0",
     "lodash": "^4.17.11",
+    "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
     "mongoose": "^5.3.0",
     "prettier": "^1.14.3"
