--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
+    "dotenv": "^6.2.0",
     "jsonfile": "^5.0.0",
     "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
